WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293336
css/css-view-transitions/nested-elements-in-overflow.html fails
https://bugs.webkit.org/show_bug.cgi?id=293336
Summary
css/css-view-transitions/nested-elements-in-overflow.html fails
Matt Woodrow
Reported
2025-05-20 19:07:14 PDT
The computed overflow rect to capture shouldn't include descendants that are captured independently.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-20 19:07:24 PDT
<
rdar://problem/151740706
>
Matt Woodrow
Comment 2
2025-05-20 19:09:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45679
EWS
Comment 3
2025-05-21 14:40:00 PDT
Committed
295231@main
(ef8de189eda0): <
https://commits.webkit.org/295231@main
> Reviewed commits have been landed. Closing PR #45679 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug