css/css-view-transitions/nested-elements-in-overflow.html fails. https://bugs.webkit.org/show_bug.cgi?id=293336 <rdar://151740706>

Reviewed by Simon Fraser.

The computed overflow rect to capture shouldn't include descendants that are
captured independently.

Also, make sure the snapshot position transform is applied after the scaling
transform.

* LayoutTests/TestExpectations:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::captureOverflowRect):
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayer.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateTransform):

Canonical link: https://commits.webkit.org/295231@main